[project]
authors = [{name = "Pedro Juan Royo", email = "pedro.juan.royo@gmail.com"}]
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.5.1,<3",
    "pillow>=12.3.0,<13",
]
name = "viztheme"
requires-python = ">= 3.11"
version = "0.1.0"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
docs = [
    "numpy>=2.2.6",
    "matplotlib>=3.10"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
viztheme = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
docs = {features = ["docs"], solve-group = "default"}
